[Hardware][Fix] text-align

--- a/Hardware/blur/src/components/Login.css
+++ b/Hardware/blur/src/components/Login.css
@@ -1,5 +1,5 @@
 .Login {
-    text-align: center;
+    text-align: left;
     font-size: 160%;
     font-weight: 1000;
     color: white;
